upload image modal - api integrated

--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -63,7 +63,7 @@
               </div>
 
               <div class="add-edit-image d-block">
-                <a href="javascript:void(0)" class="orange-text" (click)="uploadImage()">Add/Edit Image</a>
+                <a href="javascript:void(0)" class="orange-text" (click)="uploadImage(element)">Add/Edit Image</a>
               </div>
             </mat-checkbox>
           </td>
