--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -1,24 +1,27 @@
-<div class="row">
+<div class="row" [ngClass]="isMobile ? 'flex-column-reverse' : '' ">
   <div class="col-xs-6">
-    <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
-      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+    <mat-form-field class="example-form-field border-input border-input"
+      [ngClass]="!isMobile ? 'p-l-20 p-r-20' : 'po-sm-fm' ">
+      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText"
+        [ngModelOptions]="{standalone: true}" />
       <button mat-button matSuffix mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
   </div>
-  <div class="col-xs-6 text-right p-t-10">
-    <span>
-      <!-- <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
+  <div class="col-xs-12 col-md-6 text-right p-t-10" [ngClass]="isMobile ? 'p-0' : '' ">
+    <!-- <span>
+      <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
           <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
-        </mat-form-field> -->
-    </span>
+        </mat-form-field>
+    </span> -->
     <span class="p-r-5">
-      <span class="m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer" (click)="openSupplierDialog()">
-        <span class="font-size20">
+      <span class="m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer font-size-vary-grn text-decoration-underline"
+        (click)="openSupplierDialog()">
+        <span [ngClass]="isMobile ? 'font-size14' : 'font-size20' ">
           +
         </span>
         <span>
@@ -27,8 +30,11 @@
       </span>
     </span>
     <span>
-      <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
-      <button [disabled]="!form.valid" mat-raised-button matStepperNext (click)="choosenSupplier()" class="main-background-color main-button color-white">
+      <span (click)="selectCurrency()"
+        class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select
+        Currency</span>
+      <button [disabled]="!form.valid" mat-raised-button matStepperNext (click)="choosenSupplier()"
+        class="main-background-color main-button color-white" [ngClass]="isMobile ? 'po-sm-btn' : '' ">
         Next
       </button>
     </span>
@@ -50,12 +56,14 @@
 </div>
 
 <form *ngIf="allSuppliers" [formGroup]="form" (click)="choosenSupplier()">
-  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" class="mat-elevation-z8 col-sm-12">
+  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'"
+    class="mat-elevation-z8 col-sm-12">
     <!-- Supplier Name Column -->
     <ng-container matColumnDef="Supplier Name">
       <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
       <td mat-cell *matCellDef="let element" class="pt-2">
-        <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label" class="example-radio-group" formControlName="supplier">
+        <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label" class="example-radio-group"
+          formControlName="supplier">
           <mat-radio-button class="example-radio-button" [value]="element" [checked]="element.checked">
             {{ element.firstName }}{{ element.lastName }}
             {{ element.user_d }}
