--- a/src/app/features/po/initiate-po/initiate-po.component.html
+++ b/src/app/features/po/initiate-po/initiate-po.component.html
@@ -1,5 +1,5 @@
-<div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+<div class="page-start-point" [ngClass]="isMobile ? 'm-popd' : '' ">
+  <div class="p-b-20 min-height parent" [ngClass]="isMobile ? 'pl-2 pr-2' : 'p-l-20 p-r-20' ">
     <div class="row">
       <div class="col-xs-6"></div>
       <div class="col-xs-6"></div>
