--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -216,15 +216,16 @@ div.limited-character.bom {
 .download-link{
   position: absolute;
   left: 82%;
-  z-index: 1;
-  top: 17px;
+  z-index: 999;
+  top: 8px;
   width: 40px;
   height: 40px;
   background-color: #f47721;
   border-radius: 50%;
-  .fa{
-    line-height: 36px;
-    color: #fff !important;
-    cursor: pointer;
-  }
+  line-height: 38px;
+  color: #fff !important;
+}
+
+.default-image{
+  height: 50px;
 }
